Fix height on small screens for logo

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,6 +35,7 @@ body {
 
   .logo {
     max-width: 100vw;
+    height: auto;
   }
 }
 
